--- a/tuw_multi_robot_demo/CMakeLists.txt
+++ b/tuw_multi_robot_demo/CMakeLists.txt
@@ -174,15 +174,12 @@ include_directories(
 #   PATTERN ".svn" EXCLUDE
 # )
 
-## Mark config files for installation
-install(DIRECTORY cfg/
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/cfg
-)
-
-## Mark launch files for installation
-install(DIRECTORY launch/
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
-)
+## Mark other files for installation (e.g. launch and bag files, etc.)
+# install(FILES
+#   # myfile1
+#   # myfile2
+#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+# )
 
 #############
 ## Testing ##
