--- a/tuw_multi_robot_rviz/CMakeLists.txt
+++ b/tuw_multi_robot_rviz/CMakeLists.txt
@@ -240,12 +240,7 @@ install(FILES
 
 install(
   DIRECTORY icons
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-
-install(
-  DIRECTORY media
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/icons
 )
 
 #############
